--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,41 +1,54 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>CRUD</title>
-</head>
-<body>
+    <link rel="stylesheet" href="/index.css" />
+  </head>
+  <body>
     <h1>My First CRUD Page using node js, mongodb and express</h1>
+    <div class="container">
+      <div class="create">
+        <h4>Write any Quotes with name to contribute</h4>
+        <form action="/products/create" method="POST">
+          <input type="text" placeholder="name" name="name" />
+          <input type="text" placeholder="quote" name="quote" />
+          <button type="submit">Write</button>
+        </form>
+      </div>
 
-    <form action="/products/create" method="POST">
-        <input type="text" placeholder="name" name="name">
-        <input type="text" placeholder="quote" name="quote">
-        <button type="submit">Submit</button>
-      </form>
-
-      <div>
-        <h2> Quotes </h2>
-        <ul class="quotes">
-  <!-- Loop through quotes -->
-  <% for(var i = 0; i < quotes.length; i++) {%>
-    <li class="quote">
-      <!-- Output name from the iterated quote object -->
-      <span}><%= quotes[i].name %></span>:
-      <!-- Output quote from the iterated quote object -->
-      <span><%= quotes[i].quote %></span>
-    </li>
-  <% } %>
-</ul>
-</div>
-<div>
-    <h2>Darth Vadar invades!</h2>
-  <p>
-    Replace first Yoda's quote with a quote written by Darth Vadar
-  </p>
-  <button id="update-button">Replace Yoda's quote</button>
-</div>
-<script src="/main.js"></script>
-</body>
+      <div class="update">
+        <h3>UPDATE:Darth Vadar invades!</h3>
+        <p>Replace first quote with a quote written by Darth Vadar</p>
+        <button id="update-button">UPDATE</button>
+      </div>
+      <div class="delete">
+        <h3>Delete Quotes</h3>
+        <p>This time thanos Attack delete thanos Quote</p>
+        <button id="delete-button">Delete</button>
+      </div>
+      <div class="read">
+        <h2>Quotes:=></h2>
+        <table class="table">
+          <thead>
+            <tr>
+              <th>Name</th>
+              <th>Quote</th>
+            </tr>
+          </thead>
+          <tbody>
+            <% for(var i = 0; i < quotes.length; i++) { %>
+            <tr>
+              <td><%= quotes[i].name %></td>
+              <td><%= quotes[i].quote %></td>
+            </tr>
+            <% } %>
+          </tbody>
+        </table>
+      </div>
+    </div>
+    <script src="/main.js"></script>
+  </body>
 </html>
