--- a/views/index.ejs
+++ b/views/index.ejs
@@ -27,6 +27,7 @@
       <div class="delete">
         <h3>Delete Quotes</h3>
         <p>This time thanos Attack delete thanos Quote</p>
+        <!-- <input type="text" placeholder="name" /> -->
         <button id="delete-button">Delete</button>
       </div>
       <div class="read">
