Added delete Quote by Name Functionality

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -20,14 +20,16 @@
       </div>
 
       <div class="update">
-        <h3>UPDATE:Darth Vadar invades!</h3>
-        <p>Replace first quote with a quote written by Darth Vadar</p>
+        <h3>UPDATE Quotes</h3>
+        <p>Enter the name and your quote you want to update.</p>
+        <input id="updateName" type="text" placeholder="Name" />
+        <input id="update-quote" type="text" placeholder=" Write Quote" />
         <button id="update-button">UPDATE</button>
       </div>
       <div class="delete">
-        <h3>Delete Quotes</h3>
-        <p>This time thanos Attack delete thanos Quote</p>
-        <!-- <input type="text" placeholder="name" /> -->
+        <h3>DELETE Quotes</h3>
+        <p>Enter the name of person of quote you want to Delete</p>
+        <input id="input" type="text" placeholder="name" />
         <button id="delete-button">Delete</button>
       </div>
       <div class="read">
